--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,42 @@
-// Начните писать стили здесь
+@font-face {
+  font-family: "Oswald";
+  src: url("../fonts/oswaldregular.woff2") format("woff2"),
+       url("../fonts/oswaldregular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"),
+       url("../fonts/oswaldmedium.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@import "global/variables.scss";
+@import "global/mixins.scss";
+
+
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/logo.scss";
+@import "blocks/navigation.scss";
+@import "blocks/main.scss";
+@import "blocks/intro.scss";
+@import "blocks/button.scss";
+@import "blocks/variants.scss";
+@import "blocks/how.scss";
+@import "blocks/example.scss";
+@import "blocks/range.scss";
+@import "blocks/footer.scss";
+@import "blocks/location.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
+
+.visually-hidden {
+  @include visually-hidden;
+}
+
