--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,14 +1,42 @@
 // colors
 
-$special_dark-grey: #444444;
-$special_dark-grey-2: #222222;
-$basic_green: #68B738;
-$basic_green-2: #5EAA2F;
-$basic_grey: #F2F2F2;
-$special_grey: #CDCDCD;
+$special-dark-grey: #444444;
+$special-dark-grey-2: #222222;
+$basic-green: #68B738;
+$basic-green-2: #5EAA2F;
+$basic-grey: #F2F2F2;
+$basic-grey-2:  #EAEAEA;
+$special-grey: #CDCDCD;
 $special-grey-2: #666666;
 $white: #FFFFFF;
 $black: #000000;
 
 // viewports
 
+$tablet-width: 768px;
+$desktop-width: 1440px;
+$mobile-width-only: 767px;
+
+// fonts
+
+@font-face {
+  font-family: "Oswald";
+  src: url("../fonts/oswaldregular.woff2") format("woff2"),
+       url("../fonts/oswaldregular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"),
+       url("../fonts/oswaldmedium.woff") format("woff");
+  font-weight: 600;
+  font-style: medium;
+  font-display: swap;
+}
+
+// general variables
+$title-font: "Oswald", "Verdana", sans-serif;
+$text-font: "Arial", "Helvetica", sans-serif;
