--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,15 +1,16 @@
 .copyright {
-  display: flex;
-  justify-content: space-around;
+
 }
 
 .copyright__link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   text-decoration: none;
-  font-family: "Arial", "Helvetica", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  color: $special_dark-grey;
-  text-align: center;
+  color: $special-dark-grey;
+
 
   &:hover {
     text-decoration: none;
