--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -2,13 +2,13 @@
 
 $special-dark-grey: #444444;
 $special-dark-grey-2: #222222;
-$basic-green: #68B738;
-$basic-green-2: #5EAA2F;
-$basic-grey: #F2F2F2;
-$basic-grey-2:  #EAEAEA;
-$special-grey: #CDCDCD;
+$basic-green: #68b738;
+$basic-green-2: #5eaa2f;
+$basic-grey: #f2f2f2;
+$basic-grey-2:  #eaeaea;
+$special-grey: #cdcdcd;
 $special-grey-2: #666666;
-$white: #FFFFFF;
+$white: #ffffff;
 $black: #000000;
 
 // viewports
@@ -22,7 +22,7 @@ $mobile-width-only: 767px;
 @font-face {
   font-family: "Oswald";
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
-       url("../fonts/oswaldregular.woff") format("woff");
+    url("../fonts/oswaldregular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -31,7 +31,7 @@ $mobile-width-only: 767px;
 @font-face {
   font-family: "Oswald";
   src: url("../fonts/oswaldmedium.woff2") format("woff2"),
-       url("../fonts/oswaldmedium.woff") format("woff");
+    url("../fonts/oswaldmedium.woff") format("woff");
   font-weight: 600;
   font-style: medium;
   font-display: swap;
