fix: edit scss and html according validator recomendations

--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -11,9 +11,7 @@
   padding-bottom: 20px;
 }
 
-.example__history {
-
-}
+//.example__history {}
 
 .example__text {
   line-height: 18px;
@@ -64,9 +62,7 @@
   text-align: center;
 }
 
-.example__photo-before {
-
-}
+//.example__photo-before {}
 
 .example__photo-after {
   @include visually-hidden;
