--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -13,7 +13,7 @@
 .product__title {
   grid-column: 2;
   grid-row: 1;
-  font-style: $title-font;
+  //font-style: $title-font;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
