--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,12 +1,15 @@
 .social {
   display: flex;
+  flex-direction: row;
   gap: 20px;
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid $border-grey;
+  border-top: 1px solid $border-grey;
   padding: 20px;
+  width: 100%;
 }
 
 .social__item {
+  //display: block;
   width: 30px;
   height: 30px;
 
