--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -1,9 +1,11 @@
 .variants {
   @include center-wrapper;
   margin-top: 180px;
+
   @media (min-width: $tablet-width) {
-    margin-top: 0px;
+    margin-top: 0;
   }
+
   @media (min-width: $desktop-width) {
     display: flex;
     //justify-content: space-between;
@@ -19,22 +21,23 @@
     padding: 50px;
     text-align: left;
   }
+
   @media (min-width: $desktop-width) {
     width: 570px;
     margin-right: 40px;
   }
-
 }
 
 .variants__item--sliming {
   background-image: url("../img/cat_slim.svg");
   background-repeat: no-repeat;
   background-position: 20px 20px;
+
   @media (min-width: $tablet-width) {
     background-size: 200px;
     background-position: 475px 20px;
-
   }
+
   @media (min-width: $desktop-width) {
     background-size: 100px;
     background-position: 40px 20px;
@@ -45,11 +48,13 @@
   background-image: url("../img/cat_muscle.svg");
   background-repeat: no-repeat;
   background-position: 20px 20px;
+
   @media (min-width: $tablet-width) {
     background-size: 268px;
     background-position: 445px 40px;
     //text-align: left;
   }
+
   @media (min-width: $desktop-width) {
     background-size: 134px;
     background-position: 20px 30px;
@@ -63,9 +68,11 @@
   text-align: right;
   margin-right: 20px;
   margin-bottom: 20px;
+
   @media (min-width: $tablet-width) {
     text-align: left;
   }
+
   @media (min-width: $desktop-width) {
     margin-left: 120px;
     margin-bottom: 50px;
@@ -76,11 +83,13 @@
   color: $special-dark-grey;
   text-align: left;
   padding-bottom: 20px;
-  border-bottom: 1px solid #D9D9D9;
+  border-bottom: 1px solid $border-grey;
+
   @media (min-width: $tablet-width) {
     border-bottom: none;
     width: 60%;
   }
+
   @media (min-width: $desktop-width) {
     width: 100%;
   }
