--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,6 +6,7 @@ $basic-green: #68b738;
 $basic-green-2: #5eaa2f;
 $basic-grey: #f2f2f2;
 $basic-grey-2:  #eaeaea;
+$border-grey: #d9d9d9;
 $special-grey: #cdcdcd;
 $special-grey-2: #666666;
 $white: #ffffff;
@@ -33,7 +34,7 @@ $mobile-width-only: 767px;
   src: url("../fonts/oswaldmedium.woff2") format("woff2"),
     url("../fonts/oswaldmedium.woff") format("woff");
   font-weight: 600;
-  font-style: medium;
+  font-style: normal;
   font-display: swap;
 }
 
