--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,6 +1,20 @@
 .logo {
-  &--footer {
-    padding-top: 20px;
-    padding-bottom: 20px;
+  display: block;
+  width: 190px;
+  height: 38px;
+
+  @media (min-width: $tablet-width) {
+    width: 174px;
+    height: 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 202px;
+    height: 59px;
+
+    &--footer {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
   }
 }
