--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -30,7 +30,7 @@
 }
 
 .gift__title::before {
-  content: url("../img/icon_gift.svg");
+  content: url("../img/gift-icon.svg");
   margin-bottom: 48px;
   padding-top: 30px;
   display: block;
