--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,6 +1,22 @@
 .header {
+  //grid-row: 1;
+
   @include center-wrapper;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header::after {
+  @media (min-width: $desktop-width) {
+    display: block;
+    content: url("../img/index-bg-desktop.png");
+    //background-image: url("../img/index-bg-desktop.png");
+    background-color: $basic-green-2;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 0;
+    width: 50vw;
+  }
 }
