--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,11 +1,20 @@
-//.footer {}
+.footer {
+  //grid-row: 3;
+}
 
 .footer__bottom {
-  @include center-wrapper;
   background-color: $basic-grey;
-  //min-height: 236px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+}
+
+.footer__wrapper {
+  @include center-wrapper;
+  min-height: 236px;
+
+  @media (min-width: $tablet-width) {
+    min-height: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
