--- a/source/sass/blocks/how.scss
+++ b/source/sass/blocks/how.scss
@@ -22,22 +22,22 @@
   margin-bottom: 24px;
 
   &--nutrients {
-    background-image: url("../img/nutrients_icon.svg");
+    background-image: url("../img/nutrients-icon.svg");
     background-repeat: no-repeat;
   }
 
   &--powder {
-    background-image: url("../img/powder_icon.svg");
+    background-image: url("../img/powder-icon.svg");
     background-repeat: no-repeat;
   }
 
   &--meal {
-    background-image: url("../img/meal_icon.svg");
+    background-image: url("../img/meal-icon.svg");
     background-repeat: no-repeat;
   }
 
   &--time {
-    background-image: url("../img/time_icon.svg");
+    background-image: url("../img/time-icon.svg");
     background-repeat: no-repeat;
   }
 }
