--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,20 +1,27 @@
 .logo {
   display: block;
   width: 190px;
-  height: 38px;
 
   @media (min-width: $tablet-width) {
     width: 174px;
-    height: 52px;
   }
 
   @media (min-width: $desktop-width) {
     width: 202px;
-    height: 59px;
+  }
 
-    &--footer {
-      padding-top: 20px;
-      padding-bottom: 20px;
+  &--footer {
+    width: auto;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media (min-width: $tablet-width) {
+      text-align: left;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 }
