--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,33 +1,34 @@
 .social {
+  width: auto;
   display: flex;
-  flex-direction: row;
-  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
+  padding: 20px;
   border-bottom: 1px solid $border-grey;
   border-top: 1px solid $border-grey;
-  padding: 20px;
-  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    border-bottom: none;
+    border-top: none;
+  }
 }
 
 .social__item {
-  //display: block;
   width: 30px;
   height: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
 
   &--vk {
-    background: url("../img/icon_vkontakte.svg");
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url("../img/vkontakte-icon.svg");
   }
 
   &--ig {
-    background: url("../img/icon_instagram.svg");
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url("../img/instagram-icon.svg");
   }
 
   &--fb {
-    background: url("../img/icon_facebook.svg");
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url("../img/facebook-icon.svg");
   }
 }
