fix: edit section intro at index page; edit header and footer at form and catalog page

--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -84,7 +84,7 @@
 
   @media (min-width: $tablet-width) {
     width: 354px;
-    height: 607px
+    height: 607px;
   }
 
   @media (min-width: $desktop-width) {
