--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -7,10 +7,14 @@
 
   @media (min-width: $tablet-width) {
     width: $tablet-width;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   @media (min-width: $desktop-width) {
     width: $desktop-width;
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
 
