--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,18 +5,34 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  padding-top: 5px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 25px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 55px;
+  }
 }
 
-.header::after {
+.header--index {
   @media (min-width: $desktop-width) {
-    display: block;
-    content: url("../img/index-bg-desktop.png");
-    //background-image: url("../img/index-bg-desktop.png");
-    background-color: $basic-green-2;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 0;
-    width: 50vw;
+    color: $white;
+  }
+
+  &::after {
+    @media (min-width: $desktop-width) {
+      display: block;
+      content: url("../img/index-bg-desktop.png");
+      //background-image: url("../img/index-bg-desktop.png");
+      background-color: $basic-green-2;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 0;
+      width: 50vw;
+    }
   }
 }
