--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -3,7 +3,7 @@
   margin-top: 180px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 0;
+    margin-top: 20px;
   }
 
   @media (min-width: $desktop-width) {
