docs: make basic stylization of catalog page

--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -4,9 +4,9 @@
 }
 
 .additional__title {
-  font-family: $title-font;
+  //font-family: $title-font;
   font-size: 24px;
-  line-height: 24px;
+  //line-height: 24px;
   padding-top: 27px;
   padding-bottom: 25px;
 
@@ -16,4 +16,8 @@
     padding-top: 40px;
     padding-bottom: 40px;
   }
+
+  //&::before {}
 }
+
+//.additional__list {}
