--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -7,7 +7,7 @@
 }
 
 .range__text {
-  font-family: $title-font;
+  //font-family: $title-font;
   font-size: 16px;
   color: $black;
   text-transform: uppercase;
