--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,12 +1,12 @@
 .button {
   background-color: $basic-green;
-  font-family: $title-font;
+  //font-family: $title-font;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
   text-align: center;
   color: $white;
-  padding: 7px 64px;
+  padding: 10px 73px;
 
   @media (min-width: $tablet-width) {
     padding: 14px 26px;
@@ -19,7 +19,15 @@
     color: $white;
     background-color: $basic-green-2;
   }
+}
 
-  grid-row: 3;
-  grid-column: 1 / 2;
+.button--secondary {
+  background-color: $basic-grey;
+  color: $special-dark-grey;
+  padding: 20px 94px;
+
+  &:hover {
+    background-color: #ebebeb;
+    color: $special-dark-grey;
+  }
 }
