--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -3,11 +3,11 @@
 }
 
 .catalog__title {
-  font-family: $title-font;
+  //font-family: $title-font;
   font-size: 36px;
-  line-height: 36px;
-  padding-top: 27px;
-  padding-bottom: 25px;
+  //line-height: 36px;
+  padding-top: 19px;
+  padding-bottom: 29px;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
