--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,13 +1,15 @@
 .copyright {
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .copyright__link {
+  font-family: $text-font;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   color: $special-dark-grey;
 
