--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -9,7 +9,7 @@
 }
 
 .location__title {
-  font-family: $title-font;
+  //font-family: $title-font;
   font-size: 16px;
   color: $black;
   text-transform: uppercase;
@@ -18,6 +18,7 @@
 }
 
 .location__text {
+  font-family: $text-font;
   font-size: 14px;
   line-height: 20px;
   max-width: 159px;
