--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,8 +3,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 15px;
-  padding: 20px;
+  gap: 22px;
+  padding: 17px 20px;
   border-bottom: 1px solid $border-grey;
   border-top: 1px solid $border-grey;
 
