--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,7 @@
 @import "blocks/additional.scss";
 @import "blocks/gift.scss";
 @import "blocks/product.scss";
+@import "blocks/more.scss";
 
 .visually-hidden {
   @include visually-hidden;
