--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,8 @@
 @import "blocks/gift.scss";
 @import "blocks/product.scss";
 @import "blocks/more.scss";
+@import "blocks/matching.scss";
+@import "blocks/form.scss";
 
 .visually-hidden {
   @include visually-hidden;
