--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -12,9 +12,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: $desktop-width;
-    padding-left: 110px;
-    padding-right: 110px;
+    width: 1220px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
