--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -3,6 +3,7 @@
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
+  text-decoration: none;
   text-align: center;
   color: $white;
   padding: 10px 73px;
