--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -6,10 +6,12 @@
   font-size: 36px;
   padding-top: 19px;
   padding-bottom: 29px;
+  font-weight: 400;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
+    padding-bottom: 100px;
   }
 }
 
@@ -18,7 +20,7 @@
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 324px 324px;
-    column-gap: 60px;
+    gap: 100px 60px;
   }
 
   @media (min-width: $desktop-width) {
