--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -1,4 +1,11 @@
-//.location {}
+.location {
+  background-color: $basic-grey;
+  position: relative;
+}
+
+.location--index {
+  background-color: $white;
+}
 
 .location__card {
   @include center-wrapper;
@@ -6,14 +13,24 @@
   justify-content: space-between;
   align-items: center;
   min-height: 114px;
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    z-index: 2;
+    top: 20px;
+    left: 20px;
+    width: 520px;
+    background-color: $white;
+    padding: 40px 50px;
+  }
 }
 
 .location__title {
   //font-family: $title-font;
   font-size: 16px;
+  font-weight: 400;
   color: $black;
   text-transform: uppercase;
-  line-height: 18px;
   max-width: 171px;
 }
 
