--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -2,7 +2,7 @@
   z-index: 1;
 }
 
-.navigation__toogle {
+.navigation__toggle {
   display: none;
 
   @media (max-width: $mobile-width-only) {
@@ -11,23 +11,28 @@
     height: 30px;
     background-color: $white;
     position: absolute;
-    top: 25px;
+    top: 15px;
     right: 10px;
     z-index: 2;
     border: none;
     cursor: pointer;
+    outline: none;
+
+    &:focus {
+      outline: 1px solid $white;
+    }
   }
 }
 
-.navigation__toogle::after {
+.navigation__toggle::after {
   @media (max-width: $mobile-width-only) {
     width: 24px;
     height: 1.5px;
     background-color: $black;
     content: "";
     position: absolute;
-    top: 23px;
-    right: 23px;
+    top: 5px;
+    right: 3px;
     box-shadow: 0 8px 0 0 $black, 0 16px 0 0 $black;
   }
 }
@@ -45,13 +50,13 @@
 
 .navigation--opened {
   @media (max-width: $mobile-width-only) {
-    & .navigation__toogle {
+    & .navigation__toggle {
       display: block;
       width: 30px;
       height: 30px;
       background-color: $white;
       position: absolute;
-      top: 25px;
+      top: 15px;
       right: 10px;
       z-index: 2;
       border: none;
@@ -64,8 +69,8 @@
       background-color: $black;
       content: "";
       position: absolute;
-      top: 31px;
-      right: 22px;
+      top: 15px;
+      right: 5px;
       box-shadow: none;
       transform: rotate(45deg);
     }
@@ -76,8 +81,8 @@
       background-color: $black;
       content: "";
       position: absolute;
-      top: 31px;
-      right: 22px;
+      top: 15px;
+      right: 5px;
       transform: rotate(-45deg);
     }
 
@@ -97,14 +102,15 @@
   color: $black;
   font-size: 20px;
   text-transform: uppercase;
+  text-decoration: none;
+  z-index: 2;
 
   @media (max-width: $mobile-width-only) {
     width: 100%;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
-    border-bottom: 1px solid $border-grey;
-    border-top: 1px solid $border-grey;
+    border: 1px solid $border-grey;
     font-weight: 500;
   }
 
@@ -126,6 +132,7 @@
 
   &:hover {
     text-decoration: none;
+    padding-bottom: 10px;
     color: $black;
     border-bottom: none;
     opacity: 60%;
