--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -17,18 +17,8 @@
 .social__item {
   width: 30px;
   height: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
+}
 
-  &--vk {
-    background-image: url("../img/vkontakte-icon.svg");
-  }
-
-  &--ig {
-    background-image: url("../img/instagram-icon.svg");
-  }
-
-  &--fb {
-    background-image: url("../img/facebook-icon.svg");
-  }
+.social__icon:hover {
+  stroke: $basic-green;
 }
