--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -109,10 +109,10 @@
 .variants__link {
   display: block;
   padding-top: 8px;
-  //font-family: $title-font;
   font-size: 16px;
   color: $black;
   text-transform: uppercase;
+  text-decoration: none;
   text-align: left;
 
   &:hover {
