--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,8 +7,10 @@ $basic-green-2: #5eaa2f;
 $basic-grey: #f2f2f2;
 $basic-grey-2:  #eaeaea;
 $border-grey: #d9d9d9;
+$border-grey-catalog: #ebebeb;
 $special-grey: #cdcdcd;
 $special-grey-2: #666666;
+$error-color: #ff8282;
 $white: #ffffff;
 $black: #000000;
 
@@ -33,7 +35,7 @@ $mobile-width-only: 767px;
   font-family: "Oswald";
   src: url("../fonts/oswaldmedium.woff2") format("woff2"),
     url("../fonts/oswaldmedium.woff") format("woff");
-  font-weight: 600;
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
