--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -43,6 +43,7 @@
     grid-template-rows: auto auto;
     background-color: $white;
     min-height: 110px;
+    border: 2px solid $basic-grey;
   }
 
   @media (min-width: $desktop-width) {
@@ -50,7 +51,6 @@
     min-height: 80px;
     column-gap: 30px;
     grid-template-rows: auto;
-    width: 75%;
   }
 
   & .product__title {
@@ -98,6 +98,7 @@
   grid-column: 2;
   grid-row: 1;
   font-size: 16px;
+  font-weight: 400;
   line-height: 20px;
   width: 76px;
   text-transform: uppercase;
