--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,6 +2,7 @@
   background-color: $basic-green;
   font-size: 14px;
   line-height: 18px;
+  font-weight: 400;
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
@@ -24,7 +25,9 @@
 .button--secondary {
   background-color: $basic-grey;
   color: $special-dark-grey;
-  padding: 20px 94px;
+  padding: 15px 20px;
+  width: 100%;
+  font-size: 16px;
 
   &:hover {
     background-color: #ebebeb;
