--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -3,30 +3,45 @@
   background-image: url("../img/gift-photo-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center top;
-  height: 284px;
+  height: 289px;
   margin-top: 30px;
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  position: relative;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
     height: 200px;
     background-size: 708px;
     background-position: 0 63%;
+    flex-direction: row;
+    align-items: center;
   }
 
   @media (min-width: $desktop-width) {
-    width: $desktop-width;
+    grid-column: 2;
+    grid-row: 2;
+    margin-top: 0;
   }
 }
 
 .gift__title {
   font-size: 16px;
   line-height: 20px;
+  font-family: $text-font;
   font-weight: 400;
   color: $white;
   text-align: center;
-  width: 161px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 40px;
+
+  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
+    margin-right: 60px;
+    text-align: left;
+    margin-bottom: 0;
+  }
 }
 
 .gift__title::before {
@@ -34,4 +49,10 @@
   margin-bottom: 48px;
   padding-top: 30px;
   display: block;
+
+  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
+    position: absolute;
+    top: 15%;
+    left: 10%;
+  }
 }
