--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -26,12 +26,12 @@
 }
 
 .location__title {
-  //font-family: $title-font;
   font-size: 16px;
+  line-height: 20px;
   font-weight: 400;
   color: $black;
   text-transform: uppercase;
-  max-width: 171px;
+  max-width: 145px;
 }
 
 .location__text {
