--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -8,6 +8,7 @@
   margin: 0 auto;
   font-family: $title-font;
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.3571;
   background-color: $white;
   color: $special-dark-grey-2;
