--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -46,6 +46,7 @@
 
   & .variants__title {
     margin-right: 60px;
+    font-weight: 400;
   }
 }
 
@@ -67,6 +68,7 @@
 
   & .variants__title {
     margin-right: 32px;
+    font-weight: 400;
   }
 }
 
